Fix z-index

--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -4,6 +4,5 @@
   position: absolute;
   bottom: 0px;
   right: 0px;
-  z-index: 1;
   margin-right: 51px; /*line the mountain peak to the blue img correctly */
 }
