--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -6,4 +6,5 @@
   right: 0px;
   background-color: #2f80ed;
   transform: rotate(-15deg);
+  z-index: -1;
 }
