--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -3,7 +3,6 @@
   position: absolute;
   left: 64px;
   bottom: 30px;
-  z-index: 1;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
