--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,4 +14,5 @@
   background-color: #f2f2f2;
   display: flex;
   overflow: hidden;
+  z-index: -1;
 }
